Fix codeblock overflow:auto by Commenting white-space: pre-wrap

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -79,5 +79,5 @@ html, body {
   background-color: $layout-color-syntax-highlighting-background;
   padding: 0.75rem;
   margin-bottom: 1rem;
-  white-space: pre-wrap;
+  // white-space: pre-wrap;
 }
